--- a/styles.css
+++ b/styles.css
@@ -284,7 +284,7 @@ a:hover, .icon:hover{
 .gridItem {
     flex: 1 1 0;
     background-color: rgb(245, 245, 245);
-    border: 1px solid rgba(0, 0, 0, 0.3);
+    /* border: 1px solid rgba(0, 0, 0, 0.3); */
 }
 
 .gridItem:hover {
